--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-6.90MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.34MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.59MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.89MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-379.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-670.9KB/s(Youtube:不良林), server: 51.81.223.20, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.72MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2, server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-2.67MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇬🇧 英国-2.58MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
