--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-670.9KB/s(Youtube:不良林), server: 51.81.223.20, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.72MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-456.7KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2, server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.35MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇩🇪 德国-2.67MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇬🇧 英国-2.58MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇮🇹 意大利-1.38MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 167.88.61.14, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-670.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.72MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
