--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-456.7KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇫🇷 法国-1.35MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.53MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-196.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇩🇪 德国-2.61MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-258.5KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-2.67MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇬🇧 英国-2.58MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
