--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.53MB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-196.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇩🇪 德国-2.61MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-258.5KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.27MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.57MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-934.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇩🇪 德国-2.67MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇬🇧 英国-2.58MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇮🇹 意大利-1.38MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇬🇧 英国-2.17MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇮🇹 意大利-879.5KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
   - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 167.88.61.14, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-258.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇫🇷 法国-934.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
